--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,58 @@
 .App {
-  text-align: center;
+  text-align: left;
+
 }
 
-.App-logo {
-  height: 40vmin;
+h1 {
+  margin-bottom: 30px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+p {
+  margin-bottom: 20px;
+}
+
+/* nav Bar */
+nav {
+  border-bottom: 2px solid black;
+}
+
+nav ul {
+  list-style: none;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+nav ul li  {
+  margin: 10 auto;
+
+}
+
+nav ul li a {
+   padding: 0 30px;
+   color: black;
+   text-decoration: none;
+}
+
+nav ul li a:hover {
+  background: black;
   color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.page-body {
+  max-width: 800px;
+  margin: 0 auto;
+
 }
+
+a.article-item {
+    display: block;
+    margin-bottom: 50px;
+    border-bottom: 2px solid black;
+    text-decoration: none;
+}
+
+a.article-item p {
+    color: black;
+}
+
+
